Initialize: Patient Summary (#235)
* Initialize handling of Patient Summary CDAs
* Create data objects representing SDK data structures to design CDAs from
* Connect to FSK through webservice calls as Organisation (additonal handling of MIME implemented in NspClient)

---------
Co-authored-by: cbrams <FeUZ6n9CEXanvqttFW3a>
Co-authored-by: Jakob Vase <jakobvase@gmail.com>