@@ -9,9 +9,15 @@ import org.apache.commons.io.IOUtils;
 import org.slf4j.Logger;
 import org.w3c.dom.Element;
 
+import java.io.ByteArrayInputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.Properties;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public class NspClient {
     private static final Logger log = org.slf4j.LoggerFactory.getLogger(NspClient.class);
@@ -30,11 +36,55 @@ public class NspClient {
              var response = client.request(uri, soapAction)
                  .as(caller)
                  .execute(soapBody, extraHeaders)) {
-            var reply = sosiFactory.deserializeReply(IOUtils.toString(response.getResponse(), StandardCharsets.UTF_8));
+            var fullText = new String(response.getResponse().readAllBytes(), StandardCharsets.UTF_8);
+
+            // Check if response is MIME multipart
+            if (fullText.contains("--uuid:")) {
+                fullText = extractSoapFromMime(fullText);
+            }
+
+            var reply = sosiFactory.deserializeReply(fullText);
             if (response.isFault()) {
                 throw new NspClientException(String.format("Request failed with message: %s", reply.getFaultString()));
             }
             return reply;
         }
+    }
+
+    /**
+     * Extract SOAP message from MIME multipart response.
+     */
+    private static String extractSoapFromMime(String mimeResponse) {
+        // Find the boundary marker
+        Pattern boundaryPattern = Pattern.compile("--(uuid:[^\\r\\n]+)");
+        Matcher boundaryMatcher = boundaryPattern.matcher(mimeResponse);
+        if (!boundaryMatcher.find()) {
+            throw new NspClientException("Could not find MIME boundary in response");
+        }
+        String boundary = boundaryMatcher.group(1);
+
+        // Extract content between boundaries
+        Pattern contentPattern = Pattern.compile(
+            "--" + Pattern.quote(boundary) + "\\r?\\n" +
+                "([\\s\\S]*?)" +
+                "--" + Pattern.quote(boundary) + "--",
+            Pattern.MULTILINE
+        );
+
+        Matcher contentMatcher = contentPattern.matcher(mimeResponse);
+        if (contentMatcher.find()) {
+            String part = contentMatcher.group(1);
+            // Skip headers and get content after double newline
+            int contentStart = part.indexOf("\r\n\r\n");
+            if (contentStart == -1) {
+                contentStart = part.indexOf("\n\n");
+            }
+            if (contentStart == -1) {
+                throw new NspClientException("Could not find content in MIME part");
+            }
+            return part.substring(contentStart + 2).trim();
+        }
+
+        throw new NspClientException("Could not extract content from MIME response");
     }
 }
